[tool.poetry]
name = "waveshaper"
version = "0.1.0"
description = ""
authors = ["Andreas Wallner <A.Wallner@innovative-solutions.at>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
